--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="StyleSheet" href="css/layout.css" type="text/css">
     <link rel="StyleSheet" href="css/custom.css" type="text/css">
     <link rel="StyleSheet" href="css/styleproduct.css" type="text/css">
+    <script src="https://kit.fontawesome.com/e0180f4dd4.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c96595c366.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -23,8 +24,10 @@
         </div>
         </div>
 
-        <div class="containerHeroImage general-flex">
-            <img src="img/logogrande.jpeg" alt="logo">
+        <div class="containerHeroImage">
+            <div>
+                <img src="img/Logo-Hero-Image.png" alt="logo">
+            </div>
         </div>
    <!-- Modal -->
    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
