--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 </div>
             </div>
 
+
             <!-- Aqui va el formulario -->
             <h4 class="mt-4 ml-5 mb-3 container form-compra">Datos de contacto</h4>
 
@@ -138,6 +139,11 @@
         </div>
 
         <div  id="containerShopProduct" class="containerShopProduct general-flex"></div>
+        <footer class="">
+            <p class="text-center m-0 text-muted p-footer">
+                @ Derechos reservados a ACADEMLO
+            </p>
+        </footer>
         </div>
         </div>
          <div id="hide" class="containerAside">
@@ -145,6 +151,7 @@
             <div id="carShopping"></div>
             <div class="sumPrice" id="sumPrice"></div>
         </aside>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>      
 <script src="js/custom.js"></script>
