modificación del footer

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div  id="containerShopProduct" class="containerShopProduct general-flex"></div>
         <footer class="">
             <p class="text-center m-0 text-muted p-footer">
-                @ Derechos reservados a ACADEMLO
+                Hecho con 🤍 en Academlo
             </p>
         </footer>
         </div>
